--- a/ArdControl/res/layout/activity_main.xml
+++ b/ArdControl/res/layout/activity_main.xml
@@ -1,16 +1,10 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" >
-
-   <LinearLayout 
+ <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/main"
-    android:orientation="vertical"
-    android:padding="10dp" >
-
-   		<Button
+    android:orientation="vertical" >
+    
+    <Button
 	        android:id="@+id/connect"
 	        android:layout_width="wrap_content"
 	        android:ems="7"
@@ -18,28 +12,27 @@
 	        android:layout_marginBottom="30dp"
 	        android:text="@string/connect_label"
 	        android:textStyle="bold" />
+    
+    
+<ListView 
+    android:id="@+id/btDeviceList"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content" />
+    
 
-   		<!-- This is something I'm thinking about adding but haven't yet
-   			Maybe even have buttons on the pinout diagrams?
-   			
-   			<LinearLayout
-   		    android:layout_width="match_parent"
-		    android:layout_height="wrap_content"
-		    android:orientation="horizontal"
-		    android:padding="10dp" >
-	    
-	        <ImageView
-	            android:layout_width="wrap_content"
-	            android:layout_height="wrap_content"
-	            android:contentDescription="Uno pin diagram"
-	            android:src="@drawable/ic_ard_uno" />
-	        
-	        <ImageView
-	            android:layout_width="wrap_content"
-	            android:layout_height="wrap_content"
-	            android:contentDescription="Pro Mini pin diagram"
-	            android:src="@drawable/ic_ard_pro" />
-        </LinearLayout> -->
-	   
-	</LinearLayout>
-</ScrollView>
+	<include layout="@layout/pin_gui"/>
+	   <ScrollView 
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent" >
+	
+	   <LinearLayout 
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent"
+	    android:id="@+id/main"
+	    android:orientation="vertical"
+	    android:padding="10dp" >
+	
+	   		
+		</LinearLayout>
+	</ScrollView>
+</LinearLayout>
