--- a/ArdControl/res/layout/pin_control.xml
+++ b/ArdControl/res/layout/pin_control.xml
@@ -4,7 +4,15 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content" >
 
-  <TextView
+  <LinearLayout
+        android:id="@+id/drop_target"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:orientation="vertical"
+        android:background="@drawable/target" >        
+    </LinearLayout>
+    
+    <TextView
    android:id="@+id/pin_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
