--- a/ArdControl/res/layout/pin_control.xml
+++ b/ArdControl/res/layout/pin_control.xml
@@ -2,7 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content" >
+    android:layout_height="wrap_content" 
+    android:id="@+id/pin_container">
 
   <LinearLayout
         android:id="@+id/drop_target"
