--- a/ArdControl/res/layout/activity_main.xml
+++ b/ArdControl/res/layout/activity_main.xml
@@ -3,17 +3,29 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-    
-    <Button
-	        android:id="@+id/connect"
-	        android:layout_width="wrap_content"
-	        android:ems="15"
-	        android:layout_height="wrap_content"
-	        android:layout_marginBottom="10dp"
-	        android:text="@string/connect_label"
-	        android:textStyle="bold" />
-    
-    
+
+    <LinearLayout
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:orientation="horizontal">
+
+		<Button
+			android:id="@+id/connect"
+			android:layout_width="wrap_content"
+			android:ems="15"
+			android:layout_height="wrap_content"
+			android:layout_marginBottom="10dp"
+			android:text="@string/connect_label"
+			android:textStyle="bold" />
+
+		<Button android:id="@+id/disconnect"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_marginBottom="10dp"
+			android:text="@string/disconnect_label"
+			android:textStyle="bold"/>
+	</LinearLayout>
+
 <ListView 
     android:id="@+id/btDeviceList"
     android:layout_width="fill_parent"
