--- a/app/src/main/res/layout/pin_gui.xml
+++ b/app/src/main/res/layout/pin_gui.xml
@@ -7,6 +7,7 @@
 	<LinearLayout
 	    android:layout_width="wrap_content"
 	    android:layout_height="fill_parent"
+		android:padding="15dp"
 	    android:orientation="horizontal" >
 	
 	    <LinearLayout
