--- a/app/src/main/res/layout/pin_gui.xml
+++ b/app/src/main/res/layout/pin_gui.xml
@@ -2,7 +2,8 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:background="@color/light_gray"
-	android:layout_marginBottom="10dp">
+	android:layout_marginBottom="10dp"
+	android:layout_marginTop="5dp" >
             
 	<LinearLayout
 	    android:layout_width="wrap_content"
@@ -17,7 +18,8 @@
 	        android:orientation="vertical"
 	        android:layout_margin="5dp"
 	        android:layout_gravity="center_vertical"
-	        android:background="@drawable/trash" >        
+	        android:background="@drawable/trash" >
+
 		</LinearLayout>
 		
 	    <LinearLayout
@@ -27,7 +29,7 @@
 	        android:orientation="vertical"
 	        android:layout_margin="5dp"
 	        android:layout_gravity="center_vertical"
-	        android:background="@drawable/target" >        
+	        android:background="@drawable/target" >
 	    
 		    <ImageView
 		        android:id="@+id/led"
@@ -35,7 +37,7 @@
 		        android:layout_height="fill_parent"
 		        android:src="@drawable/led_on"
 		        android:padding="5dp" />
-		    
+
 		</LinearLayout>
 		
 	    <LinearLayout
@@ -45,7 +47,7 @@
 	        android:orientation="vertical"
 	        android:layout_margin="5dp"
 	        android:layout_gravity="center_vertical"
-	        android:background="@drawable/target" >        
+	        android:background="@drawable/target" >
 	    
 		    <ImageView
 		        android:id="@+id/pot"
@@ -53,7 +55,7 @@
 		        android:layout_height="fill_parent"
 		        android:src="@drawable/pot"
 		        android:padding="5dp" />
-		    
+
 		</LinearLayout>
 		
 	    <LinearLayout
@@ -71,7 +73,7 @@
 		        android:layout_height="fill_parent"
 		        android:src="@drawable/button"
 		        android:padding="5dp" />
-		    
+
 		</LinearLayout>
 		
 	    <LinearLayout
@@ -81,7 +83,7 @@
 	        android:orientation="vertical"
 	        android:layout_margin="5dp"
 	        android:layout_gravity="center_vertical"
-	        android:background="@drawable/target" >        
+	        android:background="@drawable/target" >
 	    
 		    <ImageView
 		        android:id="@+id/spst"
@@ -89,7 +91,7 @@
 		        android:layout_height="fill_parent"
 		        android:src="@drawable/spst"
 		        android:padding="5dp" />
-		    
+
 		</LinearLayout>
 		
 	    <LinearLayout
@@ -99,7 +101,7 @@
 	        android:orientation="vertical"
 	        android:layout_margin="5dp"
 	        android:layout_gravity="center_vertical"
-	        android:background="@drawable/target" >        
+	        android:background="@drawable/target" >
 	    
 		    <ImageView
 		        android:id="@+id/photo"
